tests/neg/fun-ascription.check
-- Error: tests/neg/fun-ascription.scala:2:17 --------------------------------------------------------------------------
2 |val x1 = (f: Int => Int)  // error
  |             ^^^^^^^^^^
  |             function type in type ascription must be enclosed in parentheses
-- Error: tests/neg/fun-ascription.scala:3:16 --------------------------------------------------------------------------
3 |val x2 = f: Int => Int    // error
  |                ^
  |                parentheses are required around the parameter of a lambda
  |                This construct can be rewritten automatically under -rewrite -source 3.0-migration.
